sec: replace hardcoded wildcard CORS origins with dynamic configuration